resume link updated

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     </div>
     <div class="container" id="resumeLink">
       <a class="btn btn-info style-btn" href="contact.html">Get in touch</a>
-      <a class="btn btn-info style-btn" href="D:\PORTFOLIO\images\resume.pdf"
+      <a
+        class="btn btn-info style-btn"
+        href="https://drive.google.com/file/d/1jrazH5vDkM6ryy737lDJZ3rn8x7bFYcp/view?usp=sharing"
         >Download Resume</a
       >
     </div>
