--- a/projects.html
+++ b/projects.html
@@ -41,26 +41,116 @@
         <div class="col">
           <div class="card projectCards">
             <div class="card-body projCardBody">
-              <h5 class="card-title">ADDRESS BOOK</h5>
+              <h5 class="card-title">Movie Ticket Booking App</h5>
               <h6 class="card-subtitle mb-2 text-muted">MERN stack app</h6>
               <p class="card-text">
-                Mantaian all your contacts. Add, edit or delete them. Built
-                using React, Node, Express, Mongoose and MongoDB
+                Book tickets for your favourite movie online. Choose the city
+                and theatre of your choice, make payment and enjoy watching.
+                Built using React, Node, Express, Mongoose and MongoDB
               </p>
-              <a
-                href="https://manageyourcontacts.netlify.app/"
-                class="card-link"
-                >Netlify link</a
-              >
+              <p>
+                <a
+                  href="https://manageyourcontacts.netlify.app/"
+                  class="card-link"
+                  >Netlify link</a
+                >
+              </p>
               <a
                 href="https://github.com/bhagyadeshpande/CMS-client"
                 class="card-link"
-                >Github</a
+                >Github-frontend</a
               >
               <a
                 href="https://github.com/bhagyadeshpande/CMS-server"
                 class="card-link"
-                >Github</a
+                >Github-backend</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card projectCards">
+            <div class="card-body projCardBody">
+              <h5 class="card-title">ADDRESS BOOK</h5>
+              <h6 class="card-subtitle mb-2 text-muted">MERN stack app</h6>
+              <p class="card-text">
+                An online address book to mantain details of all your contacts.
+                Add, edit or delete information related to a contact anytime.
+                Built using React, Node, Express, Mongoose and MongoDB
+              </p>
+              <p>
+                <a
+                  href="https://manageyourcontacts.netlify.app/"
+                  class="card-link"
+                  >Netlify link</a
+                >
+              </p>
+              <a
+                href="https://github.com/bhagyadeshpande/CMS-client"
+                class="card-link"
+                >Github-frontend</a
+              >
+              <a
+                href="https://github.com/bhagyadeshpande/CMS-server"
+                class="card-link"
+                >Github-backend</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card projectCards">
+            <div class="card-body projCardBody">
+              <h5 class="card-title">ADDRESS BOOK</h5>
+              <h6 class="card-subtitle mb-2 text-muted">MERN stack app</h6>
+              <p class="card-text">
+                An online address book to mantain details of all your contacts.
+                Add, edit or delete information related to a contact anytime.
+                Built using React, Node, Express, Mongoose and MongoDB
+              </p>
+              <p>
+                <a
+                  href="https://manageyourcontacts.netlify.app/"
+                  class="card-link"
+                  >Netlify link</a
+                >
+              </p>
+              <a
+                href="https://github.com/bhagyadeshpande/CMS-client"
+                class="card-link"
+                >Github-frontend</a
+              >
+              <a
+                href="https://github.com/bhagyadeshpande/CMS-server"
+                class="card-link"
+                >Github-backend</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <p></p>
+      <div class="row">
+        <div class="col">
+          <div class="card projectCards">
+            <div class="card-body projCardBody">
+              <h5 class="card-title">TIC-TAC-TOE</h5>
+              <h6 class="card-subtitle mb-2 text-muted">React app</h6>
+              <p class="card-text">
+                The popular childhood game of noughts and crosses meant for two
+                players.
+              </p>
+              <p>
+                <a
+                  href="https://tic-tac-toe-bybhagya.netlify.app/"
+                  class="card-link"
+                  >Netlify link</a
+                >
+              </p>
+              <a
+                href="https://github.com/bhagyadeshpande/tic-tac-toe"
+                class="card-link"
+                >Github link</a
               >
             </div>
           </div>
@@ -71,12 +161,14 @@
               <h5 class="card-title">MOVIE SEARCH</h5>
               <h6 class="card-subtitle mb-2 text-muted">React app</h6>
               <p class="card-text">
-                Search for a movie of your choice and get its details. Built
-                with React, using fetch API.
+                An application to search for a movie of your choice and get its
+                details. Built with React, using fetch API.
               </p>
-              <a href="https://searchyourmovie.netlify.app/" class="card-link"
-                >Netlify link</a
-              >
+              <p>
+                <a href="https://searchyourmovie.netlify.app/" class="card-link"
+                  >Netlify link</a
+                >
+              </p>
               <a
                 href="https://github.com/bhagyadeshpande/searchmovie/tree/main/src"
                 class="card-link"
@@ -88,57 +180,29 @@
         <div class="col">
           <div class="card projectCards">
             <div class="card-body projCardBody">
-              <h5 class="card-title">TIC-TAC-TOE</h5>
-              <h6 class="card-subtitle mb-2 text-muted">
-                game of noughts and crosses
-              </h6>
+              <h5 class="card-title">Random quotes Generator</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Javascript app</h6>
               <p class="card-text">
-                The popular childhood game of noughts and crosses meant for two
-                players.
+                A simple app built with JS, HTML, CSS to fetch quotes randomly
+                from an API and display it to the user on the click of a button
+              </p>
+              <p>
+                <a
+                  href="https://quotegeneratorbybhagya.netlify.app/"
+                  class="card-link"
+                  >Netlify link</a
+                >
               </p>
               <a
-                href="https://tic-tac-toe-bybhagya.netlify.app/"
-                class="card-link"
-                >Netlify link</a
-              >
-              <a
-                href="https://github.com/bhagyadeshpande/tic-tac-toe"
+                href="https://github.com/bhagyadeshpande/randomquotegenerator"
                 class="card-link"
                 >Github link</a
               >
             </div>
           </div>
         </div>
-        </div>
-        <div class="row">
-        <div class="col">
-          <div class="card projectCards">
-            <div class="card-body projCardBody">
-              <h5 class="card-title">ADDRESS BOOK</h5>
-              <h6 class="card-subtitle mb-2 text-muted">MERN stack app</h6>
-              <p class="card-text">
-                Mantaian all your contacts. Add, edit or delete them. Built
-                using React, Node, Express, Mongoose and MongoDB
-              </p>
-              <a
-                href="https://manageyourcontacts.netlify.app/"
-                class="card-link"
-                >Netlify link</a
-              >
-              <a
-                href="https://github.com/bhagyadeshpande/CMS-client"
-                class="card-link"
-                >Github</a
-              >
-              <a
-                href="https://github.com/bhagyadeshpande/CMS-server"
-                class="card-link"
-                >Github</a
-              >
-            </div>
-          </div>
-        </div>
       </div>
     </div>
+    <p></p>
   </body>
 </html>
