new project added

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
         <div class="col">
           <div class="card projectCards">
             <div class="card-body projCardBody">
-              <h5 class="card-title">Movie Ticket Booking App</h5>
+              <h5 class="card-title">MOVIE TICKECT BOOKING APP</h5>
               <h6 class="card-subtitle mb-2 text-muted">MERN stack app</h6>
               <p class="card-text">
                 Book tickets for your favourite movie online. Choose the city
@@ -180,11 +180,11 @@
         <div class="col">
           <div class="card projectCards">
             <div class="card-body projCardBody">
-              <h5 class="card-title">Random quotes Generator</h5>
+              <h5 class="card-title">RANDOM QUOTES GENERATOR</h5>
               <h6 class="card-subtitle mb-2 text-muted">Javascript app</h6>
               <p class="card-text">
-                A simple app built with JS, HTML, CSS to fetch quotes randomly
-                from an API and display it to the user on the click of a button
+                A Javascript app to fetch quotes randomly from an API and
+                display it to the user on the click of a button
               </p>
               <p>
                 <a
