netlify link changed

--- a/projects.html
+++ b/projects.html
@@ -49,19 +49,17 @@
                 Built using React, Node, Express, Mongoose and MongoDB
               </p>
               <p>
-                <a
-                  href="https://manageyourcontacts.netlify.app/"
-                  class="card-link"
+                <a href="https://movietktbooking.netlify.app/" class="card-link"
                   >Netlify link</a
                 >
               </p>
               <a
-                href="https://github.com/bhagyadeshpande/CMS-client"
+                href="https://github.com/bhagyadeshpande/moviebooking-frontend"
                 class="card-link"
                 >Github-frontend</a
               >
               <a
-                href="https://github.com/bhagyadeshpande/CMS-server"
+                href="https://github.com/bhagyadeshpande/moviebooking-bckend"
                 class="card-link"
                 >Github-backend</a
               >
