new project links added

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
     <div id="text-color">
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link align-name" href="#">Bhagyarekha Deshpande</a>
+          <a class="nav-link align-name" href="#"> Bhagyarekha Deshpande</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="index.html" style="text-align: right"
@@ -99,27 +99,24 @@
         <div class="col">
           <div class="card projectCards">
             <div class="card-body projCardBody">
-              <h5 class="card-title">ADDRESS BOOK</h5>
+              <h5 class="card-title">PLANT BOUTIQUE</h5>
               <h6 class="card-subtitle mb-2 text-muted">MERN stack app</h6>
               <p class="card-text">
-                An online address book to mantain details of all your contacts.
-                Add, edit or delete information related to a contact anytime.
-                Built using React, Node, Express, Mongoose and MongoDB
+                An online site to view list of various plants, their details and
+                basic information. New plants can be added, edited and deleted.
               </p>
               <p>
-                <a
-                  href="https://manageyourcontacts.netlify.app/"
-                  class="card-link"
+                <a href="https://plantboutique.netlify.app/" class="card-link"
                   >Netlify link</a
                 >
               </p>
               <a
-                href="https://github.com/bhagyadeshpande/CMS-client"
+                href="https://github.com/bhagyadeshpande/pb-client"
                 class="card-link"
                 >Github-frontend</a
               >
               <a
-                href="https://github.com/bhagyadeshpande/CMS-server"
+                href="https://github.com/bhagyadeshpande/pb-server"
                 class="card-link"
                 >Github-backend</a
               >
