project details updated

--- a/projects.html
+++ b/projects.html
@@ -104,6 +104,7 @@
               <p class="card-text">
                 An online site to view list of various plants, their details and
                 basic information. New plants can be added, edited and deleted.
+                Built using React, Node, Express and MongoDB
               </p>
               <p>
                 <a href="https://plantboutique.netlify.app/" class="card-link"
