--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
         <div class="col">
           <div class="card projectCards">
             <div class="card-body projCardBody">
-              <h5 class="card-title">MOVIE TICKECT BOOKING APP</h5>
+              <h5 class="card-title">MOVIE TICKET BOOKING APP</h5>
               <h6 class="card-subtitle mb-2 text-muted">MERN stack app</h6>
               <p class="card-text">
                 Book tickets for your favourite movie online. Choose the city
@@ -134,7 +134,7 @@
               <h6 class="card-subtitle mb-2 text-muted">React app</h6>
               <p class="card-text">
                 The popular childhood game of noughts and crosses meant for two
-                players.
+                players. Built with React framework.
               </p>
               <p>
                 <a
