--- a/projects.html
+++ b/projects.html
@@ -179,8 +179,8 @@
               <h5 class="card-title">RANDOM QUOTES GENERATOR</h5>
               <h6 class="card-subtitle mb-2 text-muted">Javascript app</h6>
               <p class="card-text">
-                A Javascript app to fetch quotes randomly from an API and
-                display it to the user on the click of a button
+                A Javascript app to randomly display quotes 
+                the user
               </p>
               <p>
                 <a
