link attributes updated

--- a/contact.html
+++ b/contact.html
@@ -24,16 +24,18 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="about.html" target="_blank">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="skills.html">Experience/Skills</a>
+          <a class="nav-link" href="skills.html" target="_blank"
+            >Experience/Skills</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
+          <a class="nav-link" href="projects.html" target="_blank">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="contact.html" target="_blank">Contact</a>
         </li>
       </ul>
     </div>
@@ -44,8 +46,8 @@
         <div class="zoom">
           <i class="material-icons homeIcon"> home </i>
           <ul id="adrList">
-            <li>BhagyarekhaDeshpande</li>
-            <li>#74, Karthik sadan</li>
+            <li>Bhagyarekha Deshpande</li>
+            <li>#74, Karthik Sadan</li>
             <li>KHB Colony</li>
             <li>Basaveshwara Nagar</li>
             <li>BENGALURU - 560 079</li>
