--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="about.html" target="_blank">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="skills.html">Experience/Skills</a>
+          <a class="nav-link" href="skills.html" target="_blank"
+            >Experience/Skills</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
+          <a class="nav-link" href="projects.html" target="_blank">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="contact.html" target="_blank">Contact</a>
         </li>
       </ul>
     </div>
@@ -50,10 +52,13 @@
       </div>
     </div>
     <div class="container" id="resumeLink">
-      <a class="btn btn-info style-btn" href="contact.html">Get in touch</a>
+      <a class="btn btn-info style-btn" href="contact.html" target="_blank"
+        >Get in touch</a
+      >
       <a
         class="btn btn-info style-btn"
         href="https://drive.google.com/file/d/1GsSSBeE_8533ogMHM9Xptpa2jcsrF7Ca/view?usp=sharing"
+        target="_blank"
         >Download Resume</a
       >
     </div>
