--- a/projects.html
+++ b/projects.html
@@ -20,16 +20,18 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="about.html" target="_blank">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="skills.html">Experience/Skills</a>
+          <a class="nav-link" href="skills.html" target="_blank"
+            >Experience/Skills</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
+          <a class="nav-link" href="projects.html" target="_blank">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="contact.html" target="_blank">Contact</a>
         </li>
       </ul>
     </div>
@@ -179,8 +181,7 @@
               <h5 class="card-title">RANDOM QUOTES GENERATOR</h5>
               <h6 class="card-subtitle mb-2 text-muted">Javascript app</h6>
               <p class="card-text">
-                A Javascript app to randomly display quotes 
-                the user
+                A Javascript app to randomly display quotes the user
               </p>
               <p>
                 <a
