--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
       </div>
     </div>
     <div class="container" id="resumeLink">
-      <a class="btn btn-info style-btn" href="contact.html" target="_blank"
-        >Get in touch</a
-      >
+      <a class="btn btn-info style-btn" href="contact.html">Get in touch</a>
       <a
         class="btn btn-info style-btn"
         href="https://drive.google.com/file/d/1GsSSBeE_8533ogMHM9Xptpa2jcsrF7Ca/view?usp=sharing"
