--- a/projects.html
+++ b/projects.html
@@ -20,18 +20,16 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html" target="_blank">About</a>
+          <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="skills.html" target="_blank"
-            >Experience/Skills</a
-          >
+          <a class="nav-link" href="skills.html">Experience/Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="projects.html" target="_blank">Projects</a>
+          <a class="nav-link" href="projects.html">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html" target="_blank">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
