card design modified

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </li>
       </ul>
     </div>
+
     <div class="container" id="main-content">
       <div class="row">
         <div class="col">
@@ -40,10 +41,11 @@
           <p id="second-line">
             I am <em id="myname">BHAGYAREKHA DESHPANDE</em>
           </p>
-          <p id="third-line">React Developer</p>
-          <p id="third-line">UI Designer</p>
-          <p id="third-line">MERN Stack Developer</p>
+          <p class="third-line">React Developer</p>
+          <p class="third-line">UI Designer</p>
+          <p class="third-line">MERN Stack Developer</p>
         </div>
+
         <div class="col">
           <img src="images/bha.JPG" id="myPic" />
         </div>
@@ -58,6 +60,7 @@
         >Download Resume</a
       >
     </div>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
