--- a/projects.html
+++ b/projects.html
@@ -34,12 +34,184 @@
       </ul>
     </div>
     <div class="container project">
-      <h3>My Projects</h3>
+      <h3 style="color: darksalmon">MY PROJECTS</h3>
     </div>
+
     <div class="container projectCard">
       <div class="row">
         <div class="col">
-          <div class="card projectCards">
+          <div class="card text-white bg-warning mb-3" style="max-width: 18rem">
+            <div class="card-header">
+              <h3>BOOK MOVIES</h3>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">MERN Stack App</h5>
+              <p class="card-text">
+                Book tickets for your favourite movie online at a theatre of
+                your choice, make payment and enjoy watching. Built using React,
+                Node, Express, Mongoose and MongoDB
+              </p>
+              <p>
+                <a
+                  href="https://movietktbooking.netlify.app/"
+                  class="btn btn-primary"
+                  >NETLIFY</a
+                >
+              </p>
+              <a
+                href="https://github.com/bhagyadeshpande/moviebooking-frontend"
+                class="btn btn-success"
+                >github-client</a
+              >
+              <a
+                href="https://github.com/bhagyadeshpande/moviebooking-bckend"
+                class="btn btn-success"
+                >github-server</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-white bg-warning mb-3" style="max-width: 18rem">
+            <div class="card-header">
+              <h3>ADDRESS BOOK</h3>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">MERN Stack App</h5>
+              <p class="card-text">
+                An online address book to mantain details of all your contacts.
+                Add, edit or delete contacts. Built using React, Node, Express,
+                Mongoose and MongoDB
+              </p>
+              <p>
+                <a
+                  href="https://manageyourcontacts.netlify.app/"
+                  class="btn btn-primary"
+                  >NETLIFY</a
+                >
+              </p>
+              <a
+                href="https://github.com/bhagyadeshpande/CMS-client"
+                class="btn btn-success"
+                >github-client</a
+              >
+              <a
+                href="https://github.com/bhagyadeshpande/CMS-server"
+                class="btn btn-success"
+                >github-server</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-white bg-warning mb-3" style="max-width: 18rem">
+            <div class="card-header">
+              <h3>PLANT BOUTIQUE</h3>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">MERN Stack App</h5>
+              <p class="card-text">
+                An online site to view list of various plants and their details.
+                New plants can be added, edited and deleted. Built using React,
+                Node, Express and MongoDB
+              </p>
+              <p>
+                <a
+                  href="https://plantboutique.netlify.app/"
+                  class="btn btn-primary"
+                  >NETLIFY</a
+                >
+              </p>
+              <a
+                href="https://github.com/bhagyadeshpande/pb-client"
+                class="btn btn-success"
+                >github-client</a
+              >
+              <a
+                href="https://github.com/bhagyadeshpande/pb-server"
+                class="btn btn-success"
+                >github-server</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card text-white bg-warning mb-3" style="max-width: 18rem">
+            <div class="card-header">
+              <h3>TIC-TAC-TOE</h3>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">React App</h5>
+              <p class="card-text">
+                The popular childhood game of noughts and crosses meant for two
+                players. Built with React framework.
+              </p>
+              <a
+                href="https://tic-tac-toe-bybhagya.netlify.app/"
+                class="btn btn-primary"
+                >NETLIFY</a
+              >
+              <a
+                href="https://github.com/bhagyadeshpande/tic-tac-toe"
+                class="btn btn-success"
+                >GITHUB</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-white bg-warning mb-3" style="max-width: 18rem">
+            <div class="card-header">
+              <h3>MOVIE SEARCH</h3>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">React App</h5>
+              <p class="card-text">
+                An application to search for a movie of your choice and get its
+                details. Built with React, using fetch API.
+              </p>
+              <a
+                href="https://searchyourmovie.netlify.app/"
+                class="btn btn-primary"
+                >NETLIFY</a
+              >
+              <a
+                href="https://github.com/bhagyadeshpande/searchmovie/tree/main/src"
+                class="btn btn-success"
+                >GITHUB</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card text-white bg-warning mb-3" style="max-width: 18rem">
+            <div class="card-header">
+              <h3>RANDOM QUOTES</h3>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Javascript App</h5>
+              <p class="card-text">
+                A simple app to display quotes randomly to the user on the click
+                of a button. Built with Javascript and fetch API.
+              </p>
+              <a
+                href="https://quotegeneratorbybhagya.netlify.app/"
+                class="btn btn-primary"
+                >NETLIFY</a
+              >
+              <a
+                href="https://github.com/bhagyadeshpande/randomquotegenerator"
+                class="btn btn-success"
+                >GITHUB</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--div class="card projectCards">
             <div class="card-body projCardBody">
               <h5 class="card-title">MOVIE TICKET BOOKING APP</h5>
               <h6 class="card-subtitle mb-2 text-muted">MERN stack app</h6>
@@ -64,7 +236,7 @@
                 >Github-backend</a
               >
             </div>
-          </div>
+          </!-div>
         </div>
         <div class="col">
           <div class="card projectCards">
@@ -197,7 +369,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div-->
     <p></p>
   </body>
 </html>
