--- a/projects.html
+++ b/projects.html
@@ -55,17 +55,20 @@
                 <a
                   href="https://movietktbooking.netlify.app/"
                   class="btn btn-primary"
+                  target="_blank"
                   >NETLIFY</a
                 >
               </p>
               <a
                 href="https://github.com/bhagyadeshpande/moviebooking-frontend"
                 class="btn btn-success"
+                target="_blank"
                 >github-client</a
               >
               <a
                 href="https://github.com/bhagyadeshpande/moviebooking-bckend"
                 class="btn btn-success"
+                target="_blank"
                 >github-server</a
               >
             </div>
@@ -87,17 +90,20 @@
                 <a
                   href="https://manageyourcontacts.netlify.app/"
                   class="btn btn-primary"
+                  target="_blank"
                   >NETLIFY</a
                 >
               </p>
               <a
                 href="https://github.com/bhagyadeshpande/CMS-client"
                 class="btn btn-success"
+                target="_blank"
                 >github-client</a
               >
               <a
                 href="https://github.com/bhagyadeshpande/CMS-server"
                 class="btn btn-success"
+                target="_blank"
                 >github-server</a
               >
             </div>
@@ -119,17 +125,20 @@
                 <a
                   href="https://plantboutique.netlify.app/"
                   class="btn btn-primary"
+                  target="_blank"
                   >NETLIFY</a
                 >
               </p>
               <a
                 href="https://github.com/bhagyadeshpande/pb-client"
                 class="btn btn-success"
+                target="_blank"
                 >github-client</a
               >
               <a
                 href="https://github.com/bhagyadeshpande/pb-server"
                 class="btn btn-success"
+                target="_blank"
                 >github-server</a
               >
             </div>
@@ -151,11 +160,13 @@
               <a
                 href="https://tic-tac-toe-bybhagya.netlify.app/"
                 class="btn btn-primary"
+                target="_blank"
                 >NETLIFY</a
               >
               <a
                 href="https://github.com/bhagyadeshpande/tic-tac-toe"
                 class="btn btn-success"
+                target="_blank"
                 >GITHUB</a
               >
             </div>
@@ -175,11 +186,13 @@
               <a
                 href="https://searchyourmovie.netlify.app/"
                 class="btn btn-primary"
+                target="_blank"
                 >NETLIFY</a
               >
               <a
                 href="https://github.com/bhagyadeshpande/searchmovie/tree/main/src"
                 class="btn btn-success"
+                target="_blank"
                 >GITHUB</a
               >
             </div>
@@ -199,11 +212,13 @@
               <a
                 href="https://quotegeneratorbybhagya.netlify.app/"
                 class="btn btn-primary"
+                target="_blank"
                 >NETLIFY</a
               >
               <a
                 href="https://github.com/bhagyadeshpande/randomquotegenerator"
                 class="btn btn-success"
+                target="_blank"
                 >GITHUB</a
               >
             </div>
